# py-auto5s

./: README.md  auto5s.py  pyproject.toml
src/auto5s/: __init__.py
